
== 0.3.1 2007-11-04

* Major enhancement(s):
* Minor enhancement(s):
  * Removed the need for the default install requirement, Ruby may now be installed anywhere on the Windows system (FR#15302)
  * Modified the return status when creating or manipulating a Windows service
  * Add the 'echi-converter status' command to check the status of a Windows service
* Bug fix(es):
  * Fixed bug #15293, the service now exists cleanly

== 0.3.2 2007-11-05

* Major enhancement(s):
* Minor enhancement(s):
  * FR#15361 - Added the ability to create echi_agents and then insert data from agname.dat
  * Added better error handling by giving a proper error when no project name is provided on a create command
  * Added requirement for 'uuidtools' gem for creating unique filenames for the agname.dat files since the Avaya outputs them the same
  * Capture and report the error when echi-converter create command fails
  * Provided an example ASCII CSV file in examples/ascii_csv for testing
* Bug fix(es):  
  * Bug ##15367 - Added to documentation that when using a Windows FTP server you must specify 'UNIX directory listing format'

== 0.3.3 2007-11-06

* Major enhancement(s):
* Minor enhancement(s):
  * Added error traps for ECHI_LOGS
* Bug fix(es):  
  * Fixed a bug where the utility was not properly deleting the files from the ftp server
  * Fixed a bug for the pco schema usage changing the echi_log column processed_at to processedat via the 005_change_log_processedat_name migration

== 0.3.4 2007-11-TBD

* Major enhancement(s):
* Minor enhancement(s):
  * Added a database test script to examples/db_connect_test.rb
  * Set the default ftp port in application.yml to 21
  * Properly report that the database has been initialized at the start of processing as opposed to a successful connection
  * Encapsulate the ASCII/BINARY database transactions in Begin/Rescue clauses to report on additional database issues that might arise
* Bug fix(es):  