@@ -1,6 +1,6 @@
 #ECH File construct, order is important, as the application sequentially reads the file
 #Version 13 - Extended Schema
-fields:
+echi_records:
     - name: callid
       type: int
       length: 4
@@ -232,3 +232,51 @@ fields:
     - name: asaiuui
       type: str
       length: 96
+      
+#Agents table definition derived from agname.dat
+echi_agents:
+    - name: group_id
+      type: str
+      length: 255
+    - name: login_id
+      type: str
+      length: 255
+    - name: name
+      type: str
+      length: 255
+
+#Aux Reasons table definition derived from aux_rsn.dat
+echi_aux_reasons:
+    - name: group_id
+      type: str
+      length: 255
+    - name: aux_reason
+      type: str
+      length: 255
+    - name: name
+      type: str
+      length: 255
+      
+#CWC definition derived from cwc.dat
+echi_cwcs:
+    - name: group_id
+      type: str
+      length: 255
+    - name: cwc
+      type: str
+      length: 255
+    - name: name
+      type: str
+      length: 255
+
+#VDN definition derived from vdn.dat
+echi_vdns:
+  - name: group_id
+    type: str
+    length: 255
+  - name: vdn
+    type: str
+    length: 255
+  - name: name
+    type: str
+    length: 255
