@@ -35,6 +35,9 @@ files_to_copy:
     - name: db/migrate/003_create_echi_agents.rb
     - name: db/migrate/004_change_log_name_size.rb
     - name: db/migrate/005_change_log_processedat_name.rb
+    - name: db/migrate/006_create_echi_aux_reasons.rb
+    - name: db/migrate/007_create_echi_cwcs.rb
+    - name: db/migrate/008_create_echi_vdns.rb
     - name: examples/extended_version12/chr0003
     - name: examples/extended_version12/chr0003.txt
     - name: examples/ascii_csv/chr5500.123
@@ -57,3 +60,6 @@ files_to_upgrade:
     - name: db/migrate/003_create_echi_agents.rb
     - name: db/migrate/004_change_log_name_size.rb
     - name: db/migrate/005_change_log_processedat_name.rb
+    - name: db/migrate/006_create_echi_aux_reasons.rb
+    - name: db/migrate/007_create_echi_cwcs.rb
+    - name: db/migrate/008_create_echi_vdns.rb
