@@ -4,6 +4,15 @@ end
 class EchiLog < ActiveRecord::Base
 end
 
-#The EchiAgent database table may not always be present
+#These database tables may not always be present
 class EchiAgent < ActiveRecord::Base
+end
+
+class EchiAuxReason < ActiveRecord::Base
+end
+
+class EchiCwc < ActiveRecord::Base
+end
+
+class EchiVdn < ActiveRecord::Base
 end
